fix: z-index values

--- a/sass/styles/components/sidenav.scss
+++ b/sass/styles/components/sidenav.scss
@@ -5,7 +5,7 @@
   bottom: 0;
   left: 0;
   background-color: $black;
-  z-index: 15000;
+  z-index: 999;
   padding: {
     right: 0;
     left: 0;
