--- a/sass/styles/components/topnav.scss
+++ b/sass/styles/components/topnav.scss
@@ -9,7 +9,7 @@
     left: 0;
   }
   border-bottom: solid 1px #eee;
-  z-index: 10000;
+  z-index: 998;
 
   ul {
     margin: unset;
